# serieswatcher

./: CMakeLists.txt  config.h.cmake  serieswatcher.pri  serieswatcher.pro
cmake/modules/: FindQtTvDB.cmake  FindQuazip.cmake  serieswatcher.cmake
common/: CMakeLists.txt  bannerloader.cpp  bannerloader.h  common.pro  downloadworker.cpp  downloadworker.h  job.h  schema.h  searchmodel.cpp  searchmodel.h  seriesaction.cpp  seriesaction.h  serieswatcher.h  settings.cpp  settings.h  tvdb.cpp  tvdb.h  tvdbcache.cpp  tvdbcache.h  tvdbitem.cpp  tvdbitem.h  tvdbmodel.cpp  tvdbmodel.h  updateworker.cpp  updateworker.h
pkg/: CMakeLists.txt
pkg/linux/: CMakeLists.txt  net.iksaif.serieswatcher.desktop  serieswatcher.desktop
pkg/maemo5/: CMakeLists.txt  serieswatcher-wrapper  serieswatcher.base64  serieswatcher.desktop
pkg/maemo5/debian/: changelog  control  copyright  install  rules  watch
pkg/meego/: net.iksaif.serieswatcher.spec  net.iksaif.serieswatcher.yaml  serieswatcher.spec
qmlui/qml/: serieswatcher.qml
res/: CMakeLists.txt  serieswatcher.qrc  serieswatcher.rc
res/icons/: gen.sh  icons.qrc
res/icons/serieswatcher/: index.theme
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  actiondialog.cpp  actiondialog.ui  bannerloader.cpp  downloadworker.cpp  downloadworker.h  episodedialog.cpp  episodedialog.h  episodedialog.ui  episodedialogscroll.ui  episodelistmodel.cpp  episodemodel.cpp  episodemodel.h  job.h  listwindow.cpp  listwindow.h  listwindow.ui  main.cpp  mainlistview.cpp  mainlistview.h  maintreeview.cpp  maintreeview.h  maintreewidget.cpp  maintreewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsethread.h  schema.h  schema.sql  searchdialog.cpp  searchdialog.h  searchdialog.ui  searchlistwidget.cpp  searchlistwidget.h  searchmodel.cpp  searchmodel.h  seasonmodel.cpp  (+37 more)
ui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  actiondialog.cpp  actiondialog.h  episodedialog.cpp  episodedialog.h  listwindow.cpp  listwindow.h  listwindow.ui  main.cpp  mainlistview.cpp  mainlistview.h  maintreeview.cpp  maintreeview.h  mainwindow.cpp  mainwindow.h  searchdialog.cpp  searchdialog.h  searchdialog.ui  searchlistview.cpp  searchlistview.h  seriesmenus.cpp  seriesmenus.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  showdelegate.cpp  showdelegate.h  showdialog.cpp  showdialog.h  showdialog.ui  src.pro  ui.pro  updateprogressdialog.cpp  updateprogressdialog.h  updateprogressdialog.ui
