if (SERIESWATCHER_MEEGO)
   install(FILES net.iksaif.serieswatcher.desktop DESTINATION /usr/share/applications)
   install(FILES ${resources_SOURCE_DIR}/serieswatcher.svg DESTINATION /usr/share/icons/hicolor/scalable/apps RENAME net.iksaif.serieswatcher.svg)
   install(FILES ${resources_SOURCE_DIR}/icon32.png DESTINATION /usr/share/icons/hicolor/32x32/apps RENAME net.iksaif.serieswatcher.png)
   install(FILES ${resources_SOURCE_DIR}/icon64.png DESTINATION /usr/share/icons/hicolor/64x64/apps RENAME net.iksaif.serieswatcher.png)
   install(FILES ${resources_SOURCE_DIR}/icon128.png DESTINATION /usr/share/icons/hicolor/128x128/apps RENAME net.iksaif.serieswatcher.png)
else()
   install(FILES serieswatcher.desktop DESTINATION share/applications)
   install(FILES serieswatcher.png DESTINATION share/icons/hicolor/64x64/apps)
   install(FILES ${resources_SOURCE_DIR}/serieswatcher.svg DESTINATION share/icons/hicolor/scalable/apps)
endif()
